--- a/style.css
+++ b/style.css
@@ -20,20 +20,37 @@ body {
     margin-bottom: 20px;
 }
 
+.buttons {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: auto;
+    position: relative;
+}
+
+
 button {
     background: none;
     border: none;
     padding: 0;
     margin: 30px;
+    width: 300px;
+    height: 300px;
     cursor: pointer;
     outline: none;
     user-select: none;
-    object-fit: contain;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
 }
+
 
 button img {
     width: 300px;
     height: 300px;
+    object-fit: contain;
 }
 
 #result, #score, #winner, #round {
